Ukol-3.lekce
Oprava výpisu všech rezervací v daném formátu